Fix races in tests waiting for beforeunload dialogs.

BUG=707342, 130411
TEST=no flakes
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2787393003
Cr-Commit-Position: refs/heads/master@{#462293}

Former-commit-id: 3c70a0d266c02d7e91fc5a2e5649247367a8fecc